v0.13
	* FIX : Don't snap to the road being moved (by Yves Goergen)
	* ADD : Merge multiple nodes when dragging one node onto another (by Yves Goergen)
	* FIX : Don't jump around on Download More
	* FIX : Remember last selected preferences tab page (not stored over an application restart) (by Yves Goergen)
	* FIX : Look into application directory for translations by default (by Yves Goergen; fixes #1297)
	* FIX : Don't draw the node dot if there is an icon (by Yves Goergen)
	* FIX : Make sure areas are rendered before anything else.
	* FIX : Add NVIDIA_HACK in Config.pri to (hopefully) help with Nvidia slowdowns.
	* FIX : Cache preferences values for quicker access.
	* FIX : Crash wen reloading MDC when no layer specified in the command XML (fixes #1434)
	* ADD : "Offline" mode switch.
	* ADD : Add a "Separate Move Mode" preference to remove "Move" mode. Moving features will be done from the "Edit" mode if deactivated.
	* ADD : "Node" - "Detach" to remove a node from a road. Works the same way as "Split"
	* FIX : Make Osmarender work again
	* ADD : Area transparency
	* ADD : Allow on-the-fly language change
	* ADD : Remember tag view first column size
	* FIX : Allow up to 999Mb for background image cache
	* FIX : The API doesn't like some zoom levels return from the name finder service, so fall back to a default in that case.
	* ADD : Allow canvas background to be set from a style. Background color is still overridable in the global preferences. (closes #1333)
	* FIX : Change URL in about dialog to merkaartor.org.
	* FIX : Connection error reporting in name finder service. (sponsored by today's power outage;)
	* FIX : Ugly way to ensure ways with duplicate consecutive node will not be uploaded/exported/saved
	* ADD : Do not auto-complete "name" tag + make "created_by" read-only
	* FIX : Selecting elements with Find do not update the menus (closes #1375)
	* FIX : tag values inputed during session not added to auto-completion (refs #1373)